refact: fixed maintainability issues